tests/workflows/tests/snapshots/env_vault__env_coolify_connect_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: connect_json
---
{
  "status": "connected",
  "platform": "coolify",
  "success": true
}
