tests/workflows/tests/snapshots/env_vault__env_coolify_push_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: push_json
---
{
  "success": true,
  "status": "synced",
  "platform": "coolify",
  "env": "production",
  "added": 0,
  "updated": 1,
  "removed": 0,
  "secretVerification": "exact",
  "auditRecorded": true
}
