tests/workflows/tests/snapshots/env_vault__env_fly_pull_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: pull_json
---
{
  "success": true,
  "status": "no_readable_values",
  "platform": "fly",
  "env": "production",
  "count": 0,
  "skippedSecrets": 1,
  "secretVerification": "names_only"
}
