tests/workflows/tests/snapshots/env_vault__env_fly_push_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: push_json
---
{
  "success": true,
  "status": "synced",
  "platform": "fly",
  "env": "production",
  "added": 0,
  "updated": 1,
  "removed": 0,
  "secretVerification": "names_only",
  "auditRecorded": true
}
