tests/workflows/tests/snapshots/env_vault__env_github_actions_clean_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: clean_json
---
{
  "success": true,
  "status": "synced",
  "platform": "github-actions",
  "env": "production",
  "added": 0,
  "updated": 1,
  "removed": 2,
  "secretVerification": "names_only",
  "auditRecorded": true
}
