tests/workflows/tests/snapshots/env_vault__env_github_actions_failed_push_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: failed_json
---
{
  "schema_version": 1,
  "success": false,
  "error": "script error: GitHub Actions variable update failed with HTTP 403 Forbidden: workflow denied",
  "error_code": "script"
}
