tests/workflows/tests/snapshots/env_vault__env_github_actions_pull_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: pull_json
---
{
  "success": true,
  "status": "imported",
  "platform": "github-actions",
  "env": "production",
  "count": 1,
  "keys": [
    "PUBLIC_ORIGIN"
  ],
  "skippedSecrets": 1,
  "secretVerification": "names_only",
  "auditRecorded": true
}
